k8s/leader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: leader
  template:
    metadata:
      labels:
        app: leader
    spec:
      containers:
        - name: leader
          image: staleread/hmp-api:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 15

---

apiVersion: v1
kind: Service
metadata:
  name: leader
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: leader
